// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkLogo renders without error 1`] = `
<View
  style={
    {
      "flexDirection": "column",
    }
  }
  testID="network-logo"
>
  <div
    className="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
    dir={null}
    style={
      {
        "borderBottomColor": "rgba(19,19,19,1.00)",
        "borderBottomLeftRadius": "6px",
        "borderBottomRightRadius": "6px",
        "borderBottomWidth": "0px",
        "borderLeftColor": "rgba(19,19,19,1.00)",
        "borderLeftWidth": "0px",
        "borderRightColor": "rgba(19,19,19,1.00)",
        "borderRightWidth": "0px",
        "borderTopColor": "rgba(19,19,19,1.00)",
        "borderTopLeftRadius": "6px",
        "borderTopRightRadius": "6px",
        "borderTopWidth": "0px",
        "height": "20px",
        "width": "20px",
      }
    }
  >
    <div
      className="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
      dir={null}
      suppressHydrationWarning={true}
    />
  </div>
</View>
`;

exports[`TransactionSummaryNetworkLogo renders without error 1`] = `
<View
  style={
    {
      "flexDirection": "column",
    }
  }
  testID="network-logo"
>
  <div
    className="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
    dir={null}
    style={
      {
        "borderBottomColor": "rgba(19,19,19,1.00)",
        "borderBottomLeftRadius": "6.8999999999999995px",
        "borderBottomRightRadius": "6.8999999999999995px",
        "borderBottomWidth": "1.5px",
        "borderLeftColor": "rgba(19,19,19,1.00)",
        "borderLeftWidth": "1.5px",
        "borderRightColor": "rgba(19,19,19,1.00)",
        "borderRightWidth": "1.5px",
        "borderTopColor": "rgba(19,19,19,1.00)",
        "borderTopLeftRadius": "6.8999999999999995px",
        "borderTopRightRadius": "6.8999999999999995px",
        "borderTopWidth": "1.5px",
        "height": "23px",
        "width": "23px",
      }
    }
  >
    <div
      className="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
      dir={null}
      suppressHydrationWarning={true}
    />
  </div>
</View>
`;
